--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,7 +10,8 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-    <!-- TODO #3 - Use the same list display from search.html -->
+    <!-- DONE #3 - Use the same list display from search.html -->
+    <div th:replace="search :: alljoblist"></div>
 
 </div>
 
